# nn7

./: .gitignore  CMakeLists.txt  README.md
src/: nn7datavector.cpp  nn7datavector.h  nn7exception.cpp  nn7exception.h  nn7feedforward.h  nn7layout.h  nn7linearneuron.cpp  nn7linearneuron.h  nn7randomizer.cpp  nn7randomizer.h  nn7sigmoidneuron.cpp  nn7sigmoidneuron.h  xmlconfig.h
tests/: NN7DataVector_test.cpp  NN7FeedForward_test.cpp  NN7LinearNeuron_test.cpp  NN7Randomizer_test.cpp  NN7SigmoidNeuron_test.cpp  XMLConfig_test.cpp
tests/data/: xor_feed_forward.xml  xor_train.data
